0.03
 - Fix LICENSE file.

0.02 2014-08-13T09:44:48+02:00
 - Add minimum version of Perl.
 - Add tests for constructor.
 - Add tests for get() method.

0.01 2014-08-04T23:49:35+02:00
 - First version.